p3-semantics/tests/VarActualDesignator.mj.err
 line 2, column 7: error: VAR actual must be a designator
