p3-semantics/tests/VarActualDesignator.mj
def foo(var x: int) {
  foo(1);
}
